Refactor weather into a custom component.

--- a/src/translations/cs.json
+++ b/src/translations/cs.json
@@ -11,6 +11,7 @@
     "few_clouds": "Málo oblačnosti",
     "scattered_clouds": "Polojasno",
     "broken_clouds": "Oblačno",
+    "overcast_clouds": "Zataženo",
     "shower_rain": "Přeháňky",
     "rain": "Déšť",
     "thunderstorm": "Bouřka",
