--- a/src/translations/de.json
+++ b/src/translations/de.json
@@ -11,6 +11,7 @@
     "few_clouds": "Wenige Wolken",
     "scattered_clouds": "Aufgelockerte Bewölkung",
     "broken_clouds": "Bewölkt",
+    "overcast_clouds": "Bedeckter Himmel",
     "shower_rain": "Regenschauer",
     "rain": "Regen",
     "thunderstorm": "Gewitter",
