--- a/src/translations/el.json
+++ b/src/translations/el.json
@@ -11,6 +11,7 @@
     "few_clouds": "Λίγα σύννεφα",
     "scattered_clouds": "Διάσπαρτα σύννεφα",
     "broken_clouds": "Μερική συννεφιά",
+    "overcast_clouds": "Πλήρης συννεφιά",
     "shower_rain": "Καταιγίδες",
     "rain": "Βροχή",
     "thunderstorm": "Καταιγίδα",
