--- a/src/translations/en.json
+++ b/src/translations/en.json
@@ -11,6 +11,7 @@
     "few_clouds": "Few clouds",
     "scattered_clouds": "Scattered clouds",
     "broken_clouds": "Broken clouds",
+    "overcast_clouds": "Overcast clouds",
     "shower_rain": "Shower rain",
     "rain": "Rain",
     "thunderstorm": "Thunderstorm",
