--- a/src/translations/es.json
+++ b/src/translations/es.json
@@ -11,6 +11,7 @@
     "few_clouds": "Pocas nubes",
     "scattered_clouds": "Nubes dispersas",
     "broken_clouds": "Nubes rotas",
+    "overcast_clouds": "Cielo nublado",
     "shower_rain": "Lluvia intermitente",
     "rain": "Lluvia",
     "thunderstorm": "Tormenta",
