--- a/src/translations/fi.json
+++ b/src/translations/fi.json
@@ -11,6 +11,7 @@
     "few_clouds": "Vähän pilviä",
     "scattered_clouds": "Hajanaisia pilviä",
     "broken_clouds": "Rikkonaisia pilviä",
+    "overcast_clouds": "Täysin pilvinen",
     "shower_rain": "Sadekuuroja",
     "rain": "Sade",
     "thunderstorm": "Ukkonen",
