--- a/src/translations/fr.json
+++ b/src/translations/fr.json
@@ -11,6 +11,7 @@
     "few_clouds": "Quelques nuages",
     "scattered_clouds": "Nuages épars",
     "broken_clouds": "Nuages fragmentés",
+    "overcast_clouds": "Ciel couvert",
     "shower_rain": "Averses",
     "rain": "Pluie",
     "thunderstorm": "Orage",
