--- a/src/translations/hu.json
+++ b/src/translations/hu.json
@@ -11,6 +11,7 @@
     "few_clouds": "Kevés felhő",
     "scattered_clouds": "Szórványos felhőzet",
     "broken_clouds": "Szakadozott felhőzet",
+    "overcast_clouds": "Borult égbolt",
     "shower_rain": "Zápor",
     "rain": "Eső",
     "thunderstorm": "Zivatar",
