--- a/src/translations/it.json
+++ b/src/translations/it.json
@@ -11,6 +11,7 @@
     "few_clouds": "Poche nuvole",
     "scattered_clouds": "Nuvole sparse",
     "broken_clouds": "Nuvolosità variabile",
+    "overcast_clouds": "Cielo coperto",
     "shower_rain": "Rovesci di pioggia",
     "rain": "Pioggia",
     "thunderstorm": "Temporale",
