--- a/src/translations/nl.json
+++ b/src/translations/nl.json
@@ -11,6 +11,7 @@
     "few_clouds": "Licht bewolkt",
     "scattered_clouds": "Verspreide wolken",
     "broken_clouds": "Gebroken bewolking",
+    "overcast_clouds": "Zwaar bewolkt",
     "shower_rain": "Buien",
     "rain": "Regen",
     "thunderstorm": "Onweer",
