--- a/src/translations/no.json
+++ b/src/translations/no.json
@@ -11,6 +11,7 @@
     "few_clouds": "Lettskyet",
     "scattered_clouds": "Spredte skyer",
     "broken_clouds": "Delvis skyet",
+    "overcast_clouds": "Helt overskyet",
     "shower_rain": "Regnbyger",
     "rain": "Regn",
     "thunderstorm": "Tordenvær",
