--- a/src/translations/pl.json
+++ b/src/translations/pl.json
@@ -11,6 +11,7 @@
     "few_clouds": "Niewielkie zachmurzenie",
     "scattered_clouds": "Rozproszone chmury",
     "broken_clouds": "Zachmurzenie",
+    "overcast_clouds": "Całkowite zachmurzenie",
     "shower_rain": "Przelotny deszcz",
     "rain": "Deszcz",
     "thunderstorm": "Burza",
