--- a/src/translations/pt.json
+++ b/src/translations/pt.json
@@ -11,6 +11,7 @@
     "few_clouds": "Poucas nuvens",
     "scattered_clouds": "Nuvens dispersas",
     "broken_clouds": "Nuvens fragmentadas",
+    "overcast_clouds": "Céu encoberto",
     "shower_rain": "Aguaceiros",
     "rain": "Chuva",
     "thunderstorm": "Trovoada",
