--- a/src/translations/ro.json
+++ b/src/translations/ro.json
@@ -11,6 +11,7 @@
     "few_clouds": "Puțin înnorat",
     "scattered_clouds": "Nori împrăștiați",
     "broken_clouds": "Parțial înnorat",
+    "overcast_clouds": "Cer acoperit",
     "shower_rain": "Averse",
     "rain": "Ploaie",
     "thunderstorm": "Furtună",
