--- a/src/translations/ru.json
+++ b/src/translations/ru.json
@@ -11,6 +11,7 @@
     "few_clouds": "Малооблачно",
     "scattered_clouds": "Переменная облачность",
     "broken_clouds": "Облачно с прояснениями",
+    "overcast_clouds": "Пасмурно",
     "shower_rain": "Ливень",
     "rain": "Дождь",
     "thunderstorm": "Гроза",
