--- a/src/translations/sk.json
+++ b/src/translations/sk.json
@@ -11,6 +11,7 @@
     "few_clouds": "Malá oblačnosť",
     "scattered_clouds": "Polojasno",
     "broken_clouds": "Oblačno",
+    "overcast_clouds": "Zamračené",
     "shower_rain": "Prehánky",
     "rain": "Dážď",
     "thunderstorm": "Búrka",
