--- a/src/translations/sv.json
+++ b/src/translations/sv.json
@@ -11,6 +11,7 @@
     "few_clouds": "Lätt molnighet",
     "scattered_clouds": "Spridda moln",
     "broken_clouds": "Växlande molnighet",
+    "overcast_clouds": "Mulet",
     "shower_rain": "Regnskurar",
     "rain": "Regn",
     "thunderstorm": "Åska",
