--- a/src/translations/da.json
+++ b/src/translations/da.json
@@ -11,6 +11,7 @@
     "few_clouds": "Let skyet",
     "scattered_clouds": "Spredte skyer",
     "broken_clouds": "Delvist skyet",
+    "overcast_clouds": "Overskyet himmel",
     "shower_rain": "Byger",
     "rain": "Regn",
     "thunderstorm": "Tordenvejr",
