add moderate rain

--- a/src/translations/cs.json
+++ b/src/translations/cs.json
@@ -17,7 +17,8 @@
     "thunderstorm": "Bouřka",
     "snow": "Sněžení",
     "mist": "Mlha",
-    "light_rain": "Slabý déšť"
+    "light_rain": "Slabý déšť",
+    "moderate_rain": "Mírný déšť"
   },
   "forecast": {
     "title": "Předpověď",
