Added translation for "heavy_intensity_rain" weather condition to all supported languages

--- a/src/translations/cs.json
+++ b/src/translations/cs.json
@@ -18,7 +18,8 @@
     "snow": "Sněžení",
     "mist": "Mlha",
     "light_rain": "Slabý déšť",
-    "moderate_rain": "Mírný déšť"
+    "moderate_rain": "Mírný déšť",
+    "heavy_intensity_rain": "Silný déšť"
   },
   "forecast": {
     "title": "Předpověď",
